Fix layout shift when server is on

--- a/src/App/components/Server/Server.scss
+++ b/src/App/components/Server/Server.scss
@@ -9,6 +9,7 @@
     
     img {
       width: 50%;
+      aspect-ratio: 14/12;
       user-select: none;
     }
   }
